# profile-analyst

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  compose.gpu.yaml  compose.yaml  profile_analyst.py  pyproject.toml
adapters/: apify_instagram.py  base.py  sample.py
api/: deps.py  main.py  models.py  runs.py
docker/: entrypoint.sh  mlflow.Dockerfile
docs/: architecture.md  mermaid.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
observability/: README.md  __init__.py  config.py  evaluation.py  lineage.py  spans.py  tracing.py
pipeline/: diagnostics.py  models.py  scoring_utils.py  stage1_ingest.py  stage1b_enrichment.py  stage2_normalize.py  stage3_features.py  stage4_linkage.py  stage5_associations.py  stage6_dossier.py  stage7_load.py  stage8_embed.py  stage9_gds.py
prompts/: stage3-content-analysis.md  stage3-features.md
schemas/: 01-raw.schema.json  02-normalized.schema.json  03-features.schema.json  04-linkage.schema.json  05-graph.schema.json  06-dossier.schema.json  07-graph-load.schema.json  08-query.schema.json  09-embed.schema.json  10-rag.schema.json  11-gds.schema.json  enrichment_map.schema.json
tests/: test_diagnostics.py  test_pipeline_end_to_end.py  test_stage1.py  test_stage1_enrichment_integration.py  test_stage1b.py  test_stage1b_e2e.py  test_stage2.py  test_stage3.py  test_stage6.py  test_stage6_platform_presence.py
tools/: ask.py  audit.py  cypher_safety.py  discover.py  heal_sweep.py  rag.py  validate.py
worker/: consumer.py
(+350 files in other folders)
