[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "profile-analyst"
version = "0.1.0"
description = "Social-media associations profile pipeline (Instagram-seeded)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28",
    "pydantic>=2.7",
    "jsonschema>=4.22",
    "rapidfuzz>=3.9",
    "networkx>=3.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
graph = [
    "python-louvain>=0.16",
]
observability = [
    "mlflow>=2.14",
    "openai>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
